--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ publish = false
 
 [dependencies]
 pico-args = "0.5.0"
+scanf = "1.0.0"
+
+[net]
+git-fetch-with-cli = true
+
+[source.crates-io]
+registry = "git://github.com/rust-lang/crates.io-index.git"
